--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 						<div class="col col-sm-12"><h3>Download Now</h3></div></span>
 					</div>
 					<div class="row">
-						<div class="col col-sm-6"><span class="appStoreIcons"><img src="assets/img/android_store.png"></span></div>
-						<div class="col col-sm-6"><span class="appStoreIcons"><img src="assets/img/app_store.png"></span></div>
+						<div class="col col-sm-6"><span class="appStoreIcons"><a target="_blank" href="https://play.google.com/store/apps/details?id=com.myreportplz.mrp&hl=en"><img src="assets/img/android_store.png"></a></span></div>
+						<div class="col col-sm-6"><span class="appStoreIcons"><a target="_blank" href="https://itunes.apple.com/in/app/myreportplz/id1028850297?mt=8"><img src="assets/img/app_store.png"></a></span></div>
 					</div>
 					</div>
-					<div class="col-lg-6" align="right">
+					<div class="col-lg-6" align="right"><h3> <a class="icon icon-twitter" href="#"></a>&nbsp;&nbsp;<a class="icon icon-facebook" href="#"></a>&nbsp;&nbsp;<a class="icon icon-youtube" href="https://www.youtube.com/channel/UC05U7BofegZRkbwjwYu1Kbw" target="_blank"></a>&nbsp;&nbsp;<a class="icon icon-blogger" target="_blank" href="http://myreportplz.blogspot.in/"></a> </h3>
 						<span class="headerImageContainer"><img src="assets/img/responsive-devices-collage.png"></span></div>
 				</div>
 				<div style="background-color:rgba(255, 255, 255, 0.5);padding:1px;"><h3>Contact for Product Demo <br> info@myreportplz.com </h3></div>
@@ -309,7 +309,7 @@
 
 		<div id="footerwrap">
 			<div class="container">
-				<h4>Copyright 2016 | MyReportPlz Corporation</h4>
+				<h4>Copyright 2016-17 | MyReportPlz Corporation</h4>
 			</div>
 		</div>
 
