--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="col col-sm-6"><span class="appStoreIcons"><a target="_blank" href="https://itunes.apple.com/in/app/myreportplz/id1028850297?mt=8"><img src="assets/img/app_store.png"></a></span></div>
 					</div>
 					</div>
-					<div class="col-lg-6" align="right"><h3> <a class="icon icon-twitter" href="#"></a>&nbsp;&nbsp;<a class="icon icon-facebook" href="#"></a>&nbsp;&nbsp;<a class="icon icon-youtube" href="https://www.youtube.com/channel/UC05U7BofegZRkbwjwYu1Kbw" target="_blank"></a>&nbsp;&nbsp;<a class="icon icon-blogger" target="_blank" href="http://myreportplz.blogspot.in/"></a> </h3>
+					<div class="col-lg-6" align="right"><h3> <a class="icon icon-twitter" target="_blank" href="https://twitter.com/MyReportplz"></a>&nbsp;&nbsp;<a class="icon icon-facebook" href="#"></a>&nbsp;&nbsp;<a class="icon icon-youtube" href="https://www.youtube.com/channel/UC05U7BofegZRkbwjwYu1Kbw" target="_blank"></a>&nbsp;&nbsp;<a class="icon icon-blogger" target="_blank" href="http://myreportplz.blogspot.in/"></a> </h3>
 						<span class="headerImageContainer"><img src="assets/img/responsive-devices-collage.png"></span></div>
 				</div>
 				<div style="background-color:rgba(255, 255, 255, 0.5);padding:1px;"><h3>Contact for Product Demo <br> info@myreportplz.com </h3></div>
@@ -206,6 +206,7 @@
 <p><a class="btn btn-success" href="http://www.myreportplz.com" target="_blank">Take a look</a></p>
 				</div><!-- col-lg-3 -->
 				<div class="col-lg-6 centered">
+						<img class="img-responsive" src="assets/img/cloud1.jpg" align="">
 
 				</div>
 			</div><!-- row -->
@@ -292,7 +293,7 @@
 				<hr>
 				<div class="col-lg-4">
 					<h3>Contact Information</h3>
-					<p><span class="icon icon-home"></span> 30,Preet Vihar, Raj New Delhi<br/>
+					<p><span class="icon icon-home"></span> 13,Rajdhani Enclave, Preet Vihar,New Delhi<br/>
 						<span class="icon icon-phone"></span> +91 98183 38353 <br/>
 						<span class="icon icon-mobile"></span> +91 59855 9853 <br/>
 						<span class="icon icon-envelop"></span> <a href="mailto:info@myreportplz.com"> info@myreportplz.com</a> <br/>
