--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="col col-sm-6"><span class="appStoreIcons"><a target="_blank" href="https://itunes.apple.com/in/app/myreportplz/id1028850297?mt=8"><img src="assets/img/app_store.png"></a></span></div>
 					</div>
 					</div>
-					<div class="col-lg-6" align="right"><h3> <a class="icon icon-twitter" target="_blank" href="https://twitter.com/MyReportplz"></a>&nbsp;&nbsp;<a class="icon icon-facebook" href="#"></a>&nbsp;&nbsp;<a class="icon icon-youtube" href="https://www.youtube.com/channel/UC05U7BofegZRkbwjwYu1Kbw" target="_blank"></a>&nbsp;&nbsp;<a class="icon icon-blogger" target="_blank" href="http://myreportplz.blogspot.in/"></a> </h3>
+					<div class="col-lg-6" align="right"><h3> <a class="icon icon-twitter" target="_blank" href="https://twitter.com/myreportplz1"></a>&nbsp;&nbsp;<a class="icon icon-facebook" target="_blank" href="https://www.facebook.com/Myreportplz-714097865432068/"></a>&nbsp;&nbsp;<a class="icon icon-youtube" href="https://www.youtube.com/channel/UC05U7BofegZRkbwjwYu1Kbw" target="_blank"></a>&nbsp;&nbsp;<a class="icon icon-blogger" target="_blank" href="http://myreportplz.blogspot.in/"></a> </h3>
 						<span class="headerImageContainer"><img src="assets/img/responsive-devices-collage.png"></span></div>
 				</div>
 				<div style="background-color:rgba(255, 255, 255, 0.5);padding:1px;"><h3>Contact for Product Demo <br> info@myreportplz.com </h3></div>
