--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>MyReportPlz | Access Pathology reports on Mobile</title>
+    <title>MyReportPlz | Access Pathology Reports | Online Health Reports on Mobile</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -38,9 +38,9 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon icon-shield" style="font-size:30px; color:#3498db;"></span>
+            <span class="mrpiconSpan" style="font-size:30px; color:#3498db; display:block"><img src="assets/img/mrpIcon.png" width="30px;"></span>
           </button>
-          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon icon-shield" style="font-size:18px; color:#3498db;"></span></a>
+          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="mrpiconSpan" style="font-size:18px; color:#3498db;display:block"><img style="background:transparent" src="assets/img/mrpIcon.png" width="22px"></span></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -59,7 +59,7 @@
 			<header class="clearfix">
 				<div class="row">
 					<div class="col-lg-2" align="center"><h3><span class="logoContainer"><img src="assets/img/logo_typed.png"></span></h3></div>
-					<div class="col-lg-4" align="center"><span class="headerCaptions"><p>Next Gen Health Report delivery system</p></span>
+					<div class="col-lg-4" align="center"><span class="headerCaptions"><p>Next Gen Health Report Delivery System</p></span>
 					<div class="row" style="padding-bottom:10px;"><span>
 						<div class="col col-sm-12"><h3>Download Now</h3></div></span>
 					</div>
@@ -79,22 +79,24 @@
 		<div id="greywrap">
 			<div class="row">
 				<div class="col-lg-4 callout">
+					<span class="icon icon-lab"></span>
+					<h2>Labs</h2>
+					<p>Deliver reports to your patients on their mobile devices. Retrive any report stored on our cloud at anytime. Serve your patients at par with excellence and technology advancement.    </p>
+				</div><!-- col-lg-4 -->	
+
+				<div class="col-lg-4 callout">
 					<span class="icon icon-user"></span>
 					<h2>Patients </h2>
-					<p>Save the round trips to labs, and get the repors in a touch.Organize your pathology reports effortlessly with lifelong free storage.</p>
+					<p>Save the Round Trips to Labs, and Get the Reports in a touch. Organize your Health Test Reports easily with Lifelong free storage. Share Reports with Doctors over App, Email and SMS</p>
 				</div><!-- col-lg-4 -->
 					
 				<div class="col-lg-4 callout">
 					<span class="icon icon-glasses-2"></span>
 					<h2>Doctors</h2>
-					<p>Refer your patients reports on the move and take measures instantly.Get the reports directly from the lab in a touch.</p>
+					<p>Refer your patients reports on the move and provide consultation instantly to your patients. Get the reports directly from the lab in a touch.</p>
 				</div><!-- col-lg-4 -->	
 				
-				<div class="col-lg-4 callout">
-					<span class="icon icon-lab"></span>
-					<h2>Labs</h2>
-					<p>Deliver reports to your patients on their mobile devices. Retrive any report stored on our cloud at anytime. Serve your patients at par with excellence.    </p>
-				</div><!-- col-lg-4 -->	
+
 			</div><!-- row -->
 		</div><!-- greywrap -->
 		
@@ -120,7 +122,7 @@
 			<div class="container">
 				<h1>TECHNOLOGY BREAKS THRU BOUNDARIES</h1>
 				<hr>
-				<p>Think of spending time with your loved ones when they really need you around,when technonolgy works for you. We call it a better lifestyle.</p>
+				<p>Think of spending time with your loved ones when they really need you around. We make technonolgy that cares for your time. We call it a better lifestyle.</p>
 			</div><!-- container -->
 		</section><!-- section -->
 		
@@ -137,9 +139,10 @@
 					<h3>For Pathology Labs</h3>
 					<p>
 					<ul>
-						<li>Platform to Publish Reports</li>
+						<li>Platform to Publish Reports for the Patients</li>
+						<li>B2B Platform to Publish Reports for the associated Labs, Hospitals and Doctors</li>
 						<li>Option to upload single or bulk upload</li>  
-						<li>APIs to integrate with any Lab Software</li>    
+						<li>Plug-ins and APIs to integrate with any Lab or Hospital Software</li>    
 						<li>Integrated Home Collection Module</li>      
 						<li>Role based Access to Employees</li>     
 						<li>Online Technical Support</li>
@@ -199,9 +202,9 @@
 				<div class="col-lg-6 centered">
 					<img class="img img-rectangle" src="assets/img/logo_typed.png" height="140px" width="140px" alt="">
 					<br>
- 					<a href="#" class="icon icon-twitter"></a>
-					<a href="#" class="icon icon-facebook"></a>
-					<p>MyReportPlz Coproration. is a Product based company that keeps on studying the market and various domains to identify the opportunities for Product Development. MyReportPlz App is an strategic outcome of a similar research that is designed, modeled and placed as a win-win situation for the Labs, Hospitals, Clinicks, Patients and for our business. 
+ 					<a href="https://twitter.com/myreportplz1" class="icon icon-twitter"></a>
+					<a href="https://www.facebook.com/Myreportplz-714097865432068/" class="icon icon-facebook"></a>
+					<p>MyReportPlz Coproration. is a product company that keeps on studying the market and various domains to identify the opportunities for Product Development. MyReportPlz App is an strategic outcome of a similar research that is designed, modeled and placed as a win-win situation for the Labs, Hospitals, Clinicks, Patients and for our business. 
 	</p>
 <p><a class="btn btn-success" href="http://www.myreportplz.com" target="_blank">Take a look</a></p>
 				</div><!-- col-lg-3 -->
@@ -221,7 +224,7 @@
 					</div>
 					<div class="col-lg-4">
 						<h2>www.myreportplz.com</h2>
-						<p>We believe in simple priciple of providing users more than one way to access the information. You can see all your reports in this website as well as in MyReportPlz mobile app. </p>
+						<p>We believe in simple principle of providing users more than one way to access the information. You can see all your reports in the website as well as in MyReportPlz mobile app. </p>
 						<p><a class="btn btn-success" href="http://www.myreportplz.com" target="_blank">Take a look</a></p>
 					</div>					
 				</div><!-- row -->
@@ -253,7 +256,7 @@
 			<div class="row">	
 			<div class="col-lg-3 callout">
 					<span class="icon icon-lab"></span>
-					<h3>Labcenter </h3>
+					<h3>Lab Center </h3>
 					<p>MyReportPlz Lab Center module is for you as a Hospital, Clinic or Pathology Lab. It features to configure multiple brances, manage users with different roles, manage,verify and upload reports, manage home collection with effectie realtime dashboard.</p>
 			</div>
 			<div class="col-lg-3 callout">
@@ -263,8 +266,8 @@
 			</div>
 			<div class="col-lg-3 callout">
 				<span class="icon icon-tools"></span>
-					<h3>Utility </h3>
-					<p>The bulk upload utility is for Labs or Hospitas that helps to upload hundreds or reports in one go which require very minimal time and training.</p>
+					<h3>Desktop Utility </h3>
+					<p>The Desktop Utility is for Labs or Hospitals that helps to upload hundreds or reports in one go which require very minimal time and training.</p>
 			</div>
 			<div class="col-lg-3 callout">
 				<span class="icon icon-mobile"></span>
@@ -281,8 +284,8 @@
 			<div class="container">
 				<h1>MyReportPlz Corporation</h1>
 				<hr>
-				<p>Delhi NCR,India</p>
-				<p><a class="icon icon-twitter" href="#"></a> | <a class="icon icon-facebook" href="#"></a></p>
+				<p>on a mission to enlighten the nation with content digitization</p>
+				<p><a class="icon icon-twitter" href="https://twitter.com/myreportplz1"></a> | <a class="icon icon-facebook" href="https://www.facebook.com/Myreportplz-714097865432068/"></a></p>
 			</div><!-- container -->
 		</section><!-- section -->
 		
@@ -292,10 +295,10 @@
 				<h1 class="centered">THANKS FOR VISITING US</h1>
 				<hr>
 				<div class="col-lg-4">
-					<h3>Contact Information</h3>
-					<p><span class="icon icon-home"></span> 13,Rajdhani Enclave, Preet Vihar,New Delhi<br/>
-						<span class="icon icon-phone"></span> +91 98183 38353 <br/>
-						<span class="icon icon-mobile"></span> +91 59855 9853 <br/>
+					<h3>Contact us</h3>
+					<p><span class="icon icon-home"></span> 13, Rajdhani Enclave, Preet Vihar, New Delhi<br/>
+						<span class="icon icon-phone"></span> +91 991 041 0855 (Delhi/NCR) <br/>
+						<span class="icon icon-mobile"></span> +91 893 998 9409 (Chennai) <br/>
 						<span class="icon icon-envelop"></span> <a href="mailto:info@myreportplz.com"> info@myreportplz.com</a> <br/>
 					</p>
 				</div><!-- col -->
@@ -310,7 +313,7 @@
 
 		<div id="footerwrap">
 			<div class="container">
-				<h4>Copyright 2016-17 | MyReportPlz Corporation</h4>
+				<h4>Copyright 2016-17 | MyReportPlz Corporation. All Rights Reserved.</h4>
 			</div>
 		</div>
 
